// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: AsyncContent deprecated React Async when fulfilled when empty 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state empty"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          laptop
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      No results found
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent deprecated React Async when fulfilled when empty with custom empty  1`] = `
<div>
  <h1>
    Custom renderer
  </h1>
</div>
`;

exports[`Component: AsyncContent deprecated React Async when fulfilled when not empty 1`] = `
<div>
  <h2>
    important data
  </h2>
</div>
`;

exports[`Component: AsyncContent deprecated React Async when rejected should not render when showRetryButton is undefined 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state error"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Oops something went wrong!
    </span>
    <span
      class="button d-inline-block primary"
    >
      <button
        class="btn btn-primary btn-md"
        type="button"
      >
        <div
          class="d-flex justify-content-center align-items-center"
        >
          <i
            class="icon material-icons material-icons__filled button-icon me-2"
          >
            refresh
          </i>
          Retry
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent deprecated React Async when rejected with retry button 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state error"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Oops something went wrong!
    </span>
    <span
      class="button d-inline-block primary"
    >
      <button
        class="btn btn-primary btn-md"
        type="button"
      >
        <div
          class="d-flex justify-content-center align-items-center"
        >
          <i
            class="icon material-icons material-icons__filled button-icon me-2"
          >
            refresh
          </i>
          Retry
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent deprecated React Async when rejected without retry button 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state error"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Oops something went wrong!
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent when fulfilled when empty 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state empty"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          laptop
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      No results found
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent when fulfilled when empty with custom empty  1`] = `
<div>
  <h1>
    Custom renderer
  </h1>
</div>
`;

exports[`Component: AsyncContent when fulfilled when not empty 1`] = `
<div>
  <h2>
    important data
  </h2>
</div>
`;

exports[`Component: AsyncContent when loading React Async & React Query <= v4 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state loading"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <svg
          class="spinner mb-2"
          height="75"
          viewBox="25 25 50 50"
          width="75"
        >
          <circle
            class="path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="#f0ad4e"
            stroke-miterlimit="10"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent when loading React Query v5+ 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state loading"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <svg
          class="spinner mb-2"
          height="75"
          viewBox="25 25 50 50"
          width="75"
        >
          <circle
            class="path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="#f0ad4e"
            stroke-miterlimit="10"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent when rejected should not render when showRetryButton is undefined 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state error"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Oops something went wrong!
    </span>
    <span
      class="button d-inline-block primary"
    >
      <button
        class="btn btn-primary btn-md"
        type="button"
      >
        <div
          class="d-flex justify-content-center align-items-center"
        >
          <i
            class="icon material-icons material-icons__filled button-icon me-2"
          >
            refresh
          </i>
          Retry
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent when rejected with retry button 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state error"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Oops something went wrong!
    </span>
    <span
      class="button d-inline-block primary"
    >
      <button
        class="btn btn-primary btn-md"
        type="button"
      >
        <div
          class="d-flex justify-content-center align-items-center"
        >
          <i
            class="icon material-icons material-icons__filled button-icon me-2"
          >
            refresh
          </i>
          Retry
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`Component: AsyncContent when rejected without retry button 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state error"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Oops something went wrong!
    </span>
  </div>
</div>
`;
